--- a/css/main.scss
+++ b/css/main.scss
@@ -5,21 +5,40 @@
 
 
 
+// Font variables
+$font-name: libretto-icons;
+$font-path-file-name: {{ site.baseurl }}/assets/fonts/$font-name/$font-name;
+
+$journal-font-name: journal;
+$journal-path-file-name: {{ site.baseurl }}/assets/fonts/$font-name/$font-name;
+
+@font-face {
+    font-family: $font-name;
+    src: url($font-path-file-name+'.eot'); /* IE9 Compat Modes */
+    src: url($font-path-file-name+'.woff') format('woff'), /* Pretty Modern Browsers */
+         url($font-path-file-name+'.ttf')  format('truetype'), /* Safari, Android, iOS */
+         url($font-path-file-name+'.svg#font_name') format('svg'); /* Legacy iOS */
+}
+
+
+
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: "Libre Baskerville", Baskerville, "Book Antiqua", Georgia, Times, serif;
+$base-font-size:   17px;
 $base-font-weight: 400;
+$base-line-height: 2;
+
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #787065;
+$background-color: #f2f1ed;
+$text-color:       #363431;
+$title-color:      #943526;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color:       #a09a92;
+$grey-color-light: lighten($grey-color, 30%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
