--- a/_includes/table-of-contents.html
+++ b/_includes/table-of-contents.html
@@ -25,6 +25,10 @@
 				<li><a href="https://manifold.itch.io">Personal Itch.io</a></li>
 				<li><a href="https://team-never-again.itch.io/">Team Itch.io</a></li>
 			</ul></li>
+			<li>Hacking<ul>
+				<li><a href="https://microcorruption.com/profile/27377">Microcorruption</a></li>
+				<li><a href="https://www.wechall.net/profile/indigochill">WeChall</a></li>
+			</ul></li>
 		</ul></li>
 	</ul>
 
