Some more pages

--- a/_includes/table-of-contents.html
+++ b/_includes/table-of-contents.html
@@ -6,7 +6,9 @@
 		<li>Computers
 			<ul class="computers">
 				<li><a href="/hardware">Hardware</a></li>
-				<li>Software</li>
+				<li>Software<ul>
+					<li><a href="/operatingsystems">Operating Systems</a></li>
+				</ul></li>
 			</ul>
 		</li>
 		<li>Math
@@ -14,6 +16,9 @@
 				<li><a href="/geometry">Geometry</a></li>
 			</ul>
 		</li>
+		<li>Education<ul>
+			<li><a href="/education/freedom">Freedom</a></li>
+		</ul></li>
 		<li>Religion</li>
 		<li>Science</li>
 		<li>Stuff I've Done<ul>
