Add Project Rosalind Profile

--- a/_includes/table-of-contents.html
+++ b/_includes/table-of-contents.html
@@ -34,6 +34,9 @@
 				<li><a href="https://microcorruption.com/profile/27377">Microcorruption</a></li>
 				<li><a href="https://www.wechall.net/profile/indigochill">WeChall</a></li>
 			</ul></li>
+			<li>Bioinformatics<ul>
+				<li><a href="http://rosalind.info/users/maxsond/">Project Rosalind</a></li>
+			</ul></li>
 		</ul></li>
 	</ul>
 
