--- a/_includes/table-of-contents.html
+++ b/_includes/table-of-contents.html
@@ -8,6 +8,7 @@
 				<li><a href="/hardware">Hardware</a></li>
 				<li>Software<ul>
 					<li><a href="/operatingsystems">Operating Systems</a></li>
+					<li><a href="/sysadmin">System Administration with Godot</a></li>
 				</ul></li>
 			</ul>
 		</li>
